@@ -1,9 +1,19 @@
 2008-08-11  Jim Huang  <jserv.tw@gmail.com>
 
+	* src/mainframe.cpp (CMainFrame::OnPreference): It should be able to
+	work while hiding or showing tray icon immediately.
+
+	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage):
+	Correct the brief description about tray icon switching.
+
+	* po/zh_TW.po, po/zh_CN.po: Likewise.
+
+2008-08-11  Jim Huang  <jserv.tw@gmail.com>
+
 	* src/pcmanx_gtk2.cpp (main): Correctly hide tray icon according to
 	the settings.
 
-2008-08-10  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+2008-08-10  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>
 
 	* Makefile.am: Fix the release problem of `./configure --enable-plugin`
 	after `make dist-bzip2`.
@@ -13,7 +23,7 @@
 	plugin/src/Makefile.am: Fix the release problem of `./configure
 	--enable-plugin` after `make dist-bzip2`.
 
-2008-08-09  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+2008-08-09  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>
 
 	* configure.ac: Bump to 0.3.8
 	* NEWS: Adjust 0.3.8 to August.
